# ai-safety

./: .gitignore  .pre-commit-config.yaml  AI_Shield_Kenya_Presentation.pptx  AI_Shield_Kenya_Report.docx  CASA_Final_Submission_AI_Shield_Kenya_Clean.docx  CASA_Final_Submission_Template.docx  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_competition_submission.py  setup.py  test_all_components.py  test_basic_functionality.py  test_complete_system.py  test_detectors.py  test_evaluation.py  test_evaluation_framework.py  test_installation.py  test_integration.py  test_knowledge_base.py  test_real_data.py  test_risk_scorer.py  test_sir_math.py  test_sir_model.py  test_text_processing.py
datasets/: annotation_guidelines.md  test_prompts.csv  train_prompts.csv
notebooks/: 01_quickstart.ipynb  03_case_studies.ipynb
scripts/: generate_report.py  run_evaluation.py
src/ai_shield_kenya/: __init__.py  knowledge_base.py  risk_scorer.py  sir_model.py
src/ai_shield_kenya/detectors/: __init__.py  fraud_detector.py  misinformation_detector.py  toxicity_detector.py
src/ai_shield_kenya/evaluators/: __init__.py  f1_evaluator.py
src/ai_shield_kenya/utils/: __init__.py  dialect_handler.py  text_processing.py
tests/: test_detectors.py  test_risk_scorer.py  test_sir_model.py
