[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shield-kenya"
version = "0.1.0"
description = "AI Shield Kenya: Minimal, Multilingual Safety Standards AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License with Responsible Use clause"}
keywords = ["ai safety", "kenya", "swahili", "agriculture", "education", "misinformation"]
authors = [
    {name = "AI Shield Kenya Team", email = "info@ai-shield-kenya.org"},
]
urls = {
    Homepage = "https://github.com/aisafety/ai-shield-kenya",
    Repository = "https://github.com/aisafety/ai-shield-kenya",
    Documentation = "https://github.com/aisafety/ai-shield-kenya/blob/main/README.md",
}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Education",
]

[project.optional-dependencies]
test = ["pytest>=6.0.0", "pytest-cov>=2.0.0"]
develop = ["black>=22.0.0", "flake8>=4.0.0", "mypy>=0.900.0"]

[project.dependencies]
numpy = ">=1.21.0"
scipy = ">=1.7.0"
pandas = ">=1.3.0"
scikit-learn = ">=1.0.0"
jupyter = ">=6.0.0"

[project.urls]
Homepage = "https://github.com/aisafety/ai-shield-kenya"
Repository = "https://github.com/aisafety/ai-shield-kenya"
Documentation = "https://github.com/aisafety/ai-shield-kenya/blob/main/README.md"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.mypy_cache
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = ["arg-type", "attr-defined", "call-overload", "call-arg", "import"]
[mypy.ai_shield_kenya.*]
ignore_missing_imports = true